styles.css
:root {
  --cyan-600: #4d96a9;
  --cyan-300: #8fe3f9;
  --purple-600: #855fb1;
  --purple-300: #d9b8ff;
  --slate-900: #28283d;
  --slate-600: #87879d;
  --slate-300: #d1d1df;
  --text-xl: 4rem;
  --text-lg: 2.5rem;
  --text-md: 1.125rem;
}

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Red Hat Display", sans-serif;
  text-align: center;
}

h1 {
  font-size: clamp(2.5rem, 2.036vw + 2.023rem, 3rem);
}

h1,
h2 {
  color: var(--slate-900);
  line-height: 1.1;
  font-weight: 900;
}

h2 {
  font-size: clamp(2rem, 0.751vw + 1.824rem, 2.5rem);
}

p {
  color: var(--slate-600);
  line-height: 1.5;
  font-weight: 500;
  font-size: clamp(1rem, 0.188vw + 0.956rem, 1.125rem);
}

.button {
  display: inline-block;
  padding: 1rem 2.5rem;
  color: white;
  border: none;
  border-radius: 29px;
  line-height: 1.5;
  font-weight: 900;
  transition: background-color 0.3s;
  cursor: pointer;
}

.button--cyan {
  background-color: var(--cyan-600);
}

.button--cyan:hover {
  background-color: #71c0d4;
}

.button--cyan span {
  color: var(--cyan-300);
}

.button--purple {
  background-color: var(--purple-600);
}

.button--purple:hover {
  background-color: #b18bdd;
}

.button--purple span {
  color: var(--purple-300);
}

.section {
  display: flex;
  flex-direction: column;
  gap: 4rem;
  align-items: center;
  justify-content: center;
  padding: 0 2rem;
}

.text-container {
  max-width: 31.5rem;
}

.text-container--hero,
.text-container--feature,
.text-container--cta {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1.5rem;
}

.text-container--hero {
  padding: 0 2rem;
}

.number-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  margin-top: 8.75rem;
}

.vertical-line {
  position: absolute;
  top: -5rem;
  left: auto;
  right: auto;
  height: 5rem;
  z-index: 1;
  border: 1px solid var(--slate-300);
  border-right: none;
}

.number-circle {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #fff;
  width: 3.5rem;
  height: 3.5rem;
  border: 1px solid var(--slate-300);
  border-radius: 50%;
  z-index: 2;
}

.number {
  font-weight: 900;
}

.header__nav {
  display: flex;
  justify-content: center;
  align-items: end;
  height: 4.75rem;
  margin-bottom: 4rem;
}

.hero {
  display: flex;
  flex-direction: column;
  gap: 3rem;
  align-items: center;
}

.hero__mobile-image img {
  width: clamp(27.063rem, 98.473vw + 3.983rem, 51.25rem);
  height: clamp(10rem, 36.387vw + 1.472rem, 18.938rem);
  object-fit: cover;
}

.hero__desktop-image--left,
.hero__desktop-image--right {
  display: none;
}

.hero__button-container {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  align-items: center;
}

.section--feature {
  margin-bottom: 10.75rem;
}

.feature__grid {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 1rem;
  width: 100%;
}

.feature__grid img {
  border-radius: 8px;
  width: 100%;
  height: auto;
}

.feature__tag {
  color: var(--cyan-600);
  text-transform: uppercase;
  font-size: clamp(0.875rem, 0.188vw + 0.831rem, 1rem);
  font-weight: 900;
  letter-spacing: 4px;
  margin-bottom: 1rem;
}

.feature__title {
  margin-bottom: 2rem;
}

.section--cta {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
  padding: 4rem 2rem;
  background: linear-gradient(
      0deg,
      rgba(77, 150, 168, 0.8),
      rgba(77, 150, 168, 0.8)
    ),
    url(./assets/mobile/image-footer.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  color: #fff;
}

.number-wrapper--cta {
  position: absolute;
  top: -10.5rem;
  left: 50%;
  margin-left: -1.75rem;
}

.cta__title,
.cta__description {
  color: #fff;
}

@media screen and (min-width: 48em) {
  .hero {
    margin-bottom: 6.5rem;
  }

  .hero__button-container {
    flex-direction: row;
    justify-content: center;
  }

  .feature__grid {
    grid-template-columns: 1fr 1fr 1fr 1fr;
  }

  .section--cta {
    background: linear-gradient(
        0deg,
        rgba(77, 150, 168, 0.8),
        rgba(77, 150, 168, 0.8)
      ),
      url(./assets/tablet/image-footer.jpg);
  }

  @media screen and (min-width: 82em) {
    .hero {
      flex-direction: row;
      justify-content: space-between;
    }

    .hero__desktop-image--left,
    .hero__desktop-image--right {
      display: inline-block;
    }

    .hero__mobile-image {
      display: none;
    }

    .section--cta {
      background: linear-gradient(
          0deg,
          rgba(77, 150, 168, 0.8),
          rgba(77, 150, 168, 0.8)
        ),
        url(./assets/desktop/image-footer.jpg);
      padding: 7rem 10rem;
    }

    .text-container--cta {
      flex-direction: row;
      align-items: flex-start;
      justify-content: space-between;
      text-align: start;
      max-width: 100vw;
    }

    .cta__title {
      max-width: 27.813rem;
    }

    .cta__description {
      max-width: 22.25rem;
    }
  }
}

